<resources>
    <string name="app_name">Pingo</string>
    <string name="title_activity_maps">Map</string>
    <string name="input_address">Address:</string>
    <string name="send">Send</string>
    <string name="title_activity_address">Map</string>
    <string name="searching_address">Searching Current Address</string>
    <string name="provide_permissions">Provide Permissions</string>
    <string name="please_provide_the_permissions">Please Provide the permissions</string>
    <string name="destination_address">Destination Address</string>
    <string name="centermarker">CenterMarker</string>
    <string name="title_activity_navigation">Pingo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ashfaq Nisar</string>
    <string name="nav_header_subtitle">Full Stack Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_trips">Trips</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">Logout</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="open_the_drawer">Open The Drawer</string>
    <string name="close_the_drawer">Close The Drawer</string>
    <string name="list">List</string>

    <string name="close_sheet">Close Sheet</string>
    <string name="expand_sheet">Expand Sheet</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip_login">Skip Login</string>
    <string name="back_to_login">Back To Login</string>
    <string name="mobile_number">Mobile Number</string>

    <!--Titles when a specific menu is clicked-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Trips</item>
        <item>Payments</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Support</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trips">Trips</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="pickup_icon">Pickup Icon</string>
    <string name="destination_icon">Destination Icon</string>


    <string name="pickup_address">Pickup Address</string>
    <string name="loading_destination_address">Loading the Destination Address…</string>
    <string name="ride_details">Ride Details</string>
    <string name="loading_pickup_address">Loading the Pickup Address…</string>
    <string name="Cost_of_ride">₹435.00</string>
    <string name="place_pickup">Place Pickup</string>
    <string name="transport">Transport</string>
    <string name="finish">Finish</string>
    <string name="name">Name</string>
</resources>
