<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_icon_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_trips"
                android:icon="@drawable/ic_icon_calender"
                android:title="@string/menu_trips"/>
        <item
                android:id="@+id/nav_payments"
                android:icon="@drawable/ic_icon_payment"
                android:title="@string/menu_payments">
        </item>
        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_icon_plus"
                android:title="@string/menu_notifications"/>

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_icon_settings"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_icon_profile"
                android:title="@string/menu_support"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_icon_exit"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
