<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/id_Layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        app:behavior_hideable="false"
        app:behavior_peekHeight="55dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_margin">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/ride_details"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="0dp"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/id_Text_Price_of_Ride"
                android:text="@string/Cost_of_ride">
        </TextView>

    </LinearLayout>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_address"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_pickup_address"
            android:textColor="@color/secondary_text"
            android:id="@+id/id_Text_Bottom_Pickup_Address"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/destination_address"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_destination_address"
            android:textColor="@color/secondary_text"
            android:id="@+id/id_Text_Bottom_Destination_Address"/>

    <Button
            android:id="@+id/id_But_Place_Pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_button_background"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/place_pickup"
            android:textColor="#fff"/>

</LinearLayout>