<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ic_background"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="bottom">
        <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/ic_detective"
                android:scaleType="center"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/id_Image_Thumbnail"/>

        <TextView
                android:id="@+id/id_Text_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:id="@+id/id_Text_SubTitle" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:fontFamily="sans-serif" android:textColor="#CDFFFFFF"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/ic_line">
    </View>


</LinearLayout>
