<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".ui.RegisterActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/id_ET_Register_Email"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:hint="@string/email_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_PB_Register"
            android:autofillHints="email"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/id_ET_Register_Pass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_ET_Register_Email"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:hint="@string/password_hint"
            android:autofillHints="@string/password_hint"
    />


    <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_But_Register_User"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_button_background"
            app:layout_constraintTop_toBottomOf="@+id/id_ET_Register_Mobile"
            android:elevation="25dp"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:text="@string/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_Text_BackToLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_But_Register_User"/>

    <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_PB_Register"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/id_ET_Register_Mobile"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:hint="@string/mobile_number"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_ET_Register_Pass"
            android:autofillHints="MobileNumber"/>

</androidx.constraintlayout.widget.ConstraintLayout>