<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".activity.LoginActivity"
        android:layout_margin="8dp">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/id_ET_Login_Email"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:hint="@string/email_hint"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_PB_Login"
            android:autofillHints="Email"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/id_ET_Login_Pass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_ET_Login_Email"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:hint="@string/password_hint"
            android:autofillHints="Password"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_ET_Login_Pass"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">

        <Button
                android:text="@string/login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/id_But_Login_User"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/ic_button_background"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="8dp"
                android:gravity="center"
                android:elevation="25dp" android:layout_marginEnd="8dp"
        />

        <Button
                android:text="@string/register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_But_Login_GoToRegister"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/ic_button_background"
                style="@style/Widget.AppCompat.Button.Colored"
                android:elevation="25dp"/>

    </LinearLayout>


    <TextView
            android:text="@string/skip_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_Text_SkipLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_ET_Login_Pass"/>

    <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_PB_Login"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_But_Login_Google"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:foreground="?attr/selectableItemBackground"

            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:elevation="30dp" android:layout_marginTop="16dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>