<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:card_view="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.NavigationHomeFragment">

    <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">

        <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                android:background="#ffffff"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent">


            <TextView
                    android:id="@+id/id_text_pickup_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:hint="@string/pickup_address"
                    android:singleLine="true" android:layout_gravity="center"/>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_cardview_pickup"
                android:stateListAnimator="@animator/lift_on_touch"
                card_view:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/id_cardview_pickup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#ffffff"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="5dp">


            <TextView
                    android:id="@+id/id_text_destination_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="16dp"
                    android:scrollHorizontally="true"
                    android:hint="@string/destination_address"
                    android:singleLine="true" android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"/>


        </android.support.v7.widget.CardView>


        <fragment
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:tag="tag_map_fragment" android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/id_But_PlaceThePickup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
        </fragment>


        <ImageView
                android:id="@+id/centerMarker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_placeholder"
                android:contentDescription="@string/centermarker"
                app:layout_constraintEnd_toEndOf="@+id/mapFragment" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/mapFragment"
                app:layout_constraintBottom_toBottomOf="@+id/mapFragment"
                app:layout_constraintTop_toTopOf="@+id/mapFragment" app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintVertical_bias="0.456">
        </ImageView>


        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_icon_location"
                app:elevation="18dp"
                app:backgroundTint="@color/colorPrimary"
                android:id="@+id/id_Float_But_GetMyLocation"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toTopOf="@+id/id_But_PlaceThePickup"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"

        />
        <Button
                android:text="@string/place_pickup"
                android:textColor="@color/quantum_white_100"
                android:layout_width="0dp"
                android:background="@drawable/ic_button_background"
                android:layout_height="58dp"
                android:stateListAnimator="@animator/lift_on_touch"
                android:id="@+id/id_But_PlaceThePickup"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>